# smiles-autoencoder

./: README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml
examples/: train_autoencoder.ipynb
smiles_autoencoder/: encoding.py  model.py
